my-apps/media/tubearchivist/elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivist-es
  namespace: tubearchivist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: archivist-es
  template:
    metadata:
      labels:
        app: archivist-es
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:9.2.0
        ports:
        - containerPort: 9200
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [ "ALL" ]
        volumeMounts:
        - name: es-data
          mountPath: /usr/share/elasticsearch/data
        resources:
          requests:
            cpu: 500m
            memory: 2Gi
          limits:
            cpu: "2"
            memory: 4Gi
      volumes:
      - name: es-data
        persistentVolumeClaim:
          claimName: es-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: archivist-es
  namespace: tubearchivist
spec:
  selector:
    app: archivist-es
  ports:
  - port: 9200
    targetPort: 9200
