my-apps/media/tubearchivist/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tubearchivist
  namespace: tubearchivist
spec:
  type: LoadBalancer
  selector:
    app: tubearchivist
  ports:
  - name: http
    port: 8000
    targetPort: 8000
