my-apps/media/tubearchivist/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tubearchivist
  namespace: tubearchivist
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal
    namespace: gateway
  hostnames:
  - tube.vanillax.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: tubearchivist
      port: 8000
      weight: 1
